@@ -1,6 +1,13 @@
+2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b208
+
+	* Change: view_album - unset $myAlbum if item isn't an album so that
+	  we don't carry it over to the next item
+
+	* Change: un-revert printChildren opt, it was correct
+
 2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b207
 
-	* Change: Revert getNextPhoto opt .. might be causing an issue
+	* Change: Revert printChildren opt .. might be causing an issue
 
 2004-06-22 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b206
 
